crates/tele_tokenizer/tests/snapshots/basics__at_keyword.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 135
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: AtKeyword,
            start_pos: Pos {
                offset: 1,
                line: 1,
                column: 2,
            },
            end_pos: Pos {
                offset: 6,
                line: 1,
                column: 7,
            },
            content: "media",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 6,
                line: 1,
                column: 7,
            },
            end_pos: Pos {
                offset: 7,
                line: 1,
                column: 8,
            },
            content: " ",
        },
        Token {
            token_type: Ident,
            start_pos: Pos {
                offset: 7,
                line: 1,
                column: 8,
            },
            end_pos: Pos {
                offset: 13,
                line: 1,
                column: 14,
            },
            content: "screen",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 13,
                line: 1,
                column: 14,
            },
            end_pos: Pos {
                offset: 13,
                line: 1,
                column: 14,
            },
            content: "",
        },
    ],
)
