crates/tele_tokenizer/tests/snapshots/basics__hyphen_minus_sign_as_ident.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 111
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: Ident,
            start_pos: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end_pos: Pos {
                offset: 13,
                line: 1,
                column: 14,
            },
            content: "--theme-color",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 13,
                line: 1,
                column: 14,
            },
            end_pos: Pos {
                offset: 13,
                line: 1,
                column: 14,
            },
            content: "",
        },
    ],
)
