crates/tele_tokenizer/tests/snapshots/basics__hyphen_minus_sign_as_numeric.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 99
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            content: "-200",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            end_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            content: "",
        },
    ],
)
