crates/tele_tokenizer/tests/snapshots/basics__it_works.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 8
expression: tokenizer.tokenize()

---
[
  {
    "token_type": "Delim",
    "start_pos": {
      "offset": 0,
      "line": 1,
      "column": 1
    },
    "end_pos": {
      "offset": 0,
      "line": 1,
      "column": 2
    },
    "content": [
      "."
    ]
  },
  {
    "token_type": "Ident",
    "start_pos": {
      "offset": 0,
      "line": 1,
      "column": 2
    },
    "end_pos": {
      "offset": 3,
      "line": 1,
      "column": 5
    },
    "content": [
      "f",
      "o",
      "o"
    ]
  },
  {
    "token_type": "WhiteSpace",
    "start_pos": {
      "offset": 3,
      "line": 1,
      "column": 5
    },
    "end_pos": {
      "offset": 4,
      "line": 1,
      "column": 6
    },
    "content": [
      " "
    ]
  },
  {
    "token_type": "LeftCurlyBracket",
    "start_pos": {
      "offset": 4,
      "line": 1,
      "column": 6
    },
    "end_pos": {
      "offset": 5,
      "line": 1,
      "column": 7
    },
    "content": [
      "{"
    ]
  },
  {
    "token_type": "WhiteSpace",
    "start_pos": {
      "offset": 5,
      "line": 1,
      "column": 7
    },
    "end_pos": {
      "offset": 6,
      "line": 1,
      "column": 8
    },
    "content": [
      " "
    ]
  },
  {
    "token_type": "Ident",
    "start_pos": {
      "offset": 6,
      "line": 1,
      "column": 8
    },
    "end_pos": {
      "offset": 11,
      "line": 1,
      "column": 13
    },
    "content": [
      "c",
      "o",
      "l",
      "o",
      "r"
    ]
  },
  {
    "token_type": "Colon",
    "start_pos": {
      "offset": 11,
      "line": 1,
      "column": 13
    },
    "end_pos": {
      "offset": 12,
      "line": 1,
      "column": 14
    },
    "content": [
      ":"
    ]
  },
  {
    "token_type": "WhiteSpace",
    "start_pos": {
      "offset": 12,
      "line": 1,
      "column": 14
    },
    "end_pos": {
      "offset": 13,
      "line": 1,
      "column": 15
    },
    "content": [
      " "
    ]
  },
  {
    "token_type": "Ident",
    "start_pos": {
      "offset": 13,
      "line": 1,
      "column": 15
    },
    "end_pos": {
      "offset": 16,
      "line": 1,
      "column": 18
    },
    "content": [
      "r",
      "e",
      "d"
    ]
  },
  {
    "token_type": "SemiColon",
    "start_pos": {
      "offset": 16,
      "line": 1,
      "column": 18
    },
    "end_pos": {
      "offset": 17,
      "line": 1,
      "column": 19
    },
    "content": [
      ";"
    ]
  },
  {
    "token_type": "WhiteSpace",
    "start_pos": {
      "offset": 17,
      "line": 1,
      "column": 19
    },
    "end_pos": {
      "offset": 18,
      "line": 1,
      "column": 20
    },
    "content": [
      " "
    ]
  },
  {
    "token_type": "RightCurlyBracket",
    "start_pos": {
      "offset": 18,
      "line": 1,
      "column": 20
    },
    "end_pos": {
      "offset": 19,
      "line": 1,
      "column": 21
    },
    "content": [
      "}"
    ]
  }
]
