crates/tele_tokenizer/tests/snapshots/basics__number_token.snap
---
source: crates/tele_tokenizer/tests/basics.rs
assertion_line: 69
expression: tokenizer.tokenize()

---
Ok(
    [
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 0,
                line: 1,
                column: 1,
            },
            end_pos: Pos {
                offset: 1,
                line: 1,
                column: 2,
            },
            content: "2",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 1,
                line: 1,
                column: 2,
            },
            end_pos: Pos {
                offset: 2,
                line: 1,
                column: 3,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 2,
                line: 1,
                column: 3,
            },
            end_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            content: ".3",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 4,
                line: 1,
                column: 5,
            },
            end_pos: Pos {
                offset: 5,
                line: 1,
                column: 6,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 5,
                line: 1,
                column: 6,
            },
            end_pos: Pos {
                offset: 8,
                line: 1,
                column: 9,
            },
            content: "4.4",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 8,
                line: 1,
                column: 9,
            },
            end_pos: Pos {
                offset: 9,
                line: 1,
                column: 10,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 9,
                line: 1,
                column: 10,
            },
            end_pos: Pos {
                offset: 11,
                line: 1,
                column: 12,
            },
            content: "+5",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 11,
                line: 1,
                column: 12,
            },
            end_pos: Pos {
                offset: 12,
                line: 1,
                column: 13,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 12,
                line: 1,
                column: 13,
            },
            end_pos: Pos {
                offset: 14,
                line: 1,
                column: 15,
            },
            content: "-6",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 14,
                line: 1,
                column: 15,
            },
            end_pos: Pos {
                offset: 15,
                line: 1,
                column: 16,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 15,
                line: 1,
                column: 16,
            },
            end_pos: Pos {
                offset: 18,
                line: 1,
                column: 19,
            },
            content: "7E7",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 18,
                line: 1,
                column: 19,
            },
            end_pos: Pos {
                offset: 19,
                line: 1,
                column: 20,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 19,
                line: 1,
                column: 20,
            },
            end_pos: Pos {
                offset: 22,
                line: 1,
                column: 23,
            },
            content: "8e8",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 22,
                line: 1,
                column: 23,
            },
            end_pos: Pos {
                offset: 23,
                line: 1,
                column: 24,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 23,
                line: 1,
                column: 24,
            },
            end_pos: Pos {
                offset: 27,
                line: 1,
                column: 28,
            },
            content: "9E+9",
        },
        Token {
            token_type: WhiteSpace,
            start_pos: Pos {
                offset: 27,
                line: 1,
                column: 28,
            },
            end_pos: Pos {
                offset: 28,
                line: 1,
                column: 29,
            },
            content: " ",
        },
        Token {
            token_type: Number,
            start_pos: Pos {
                offset: 28,
                line: 1,
                column: 29,
            },
            end_pos: Pos {
                offset: 32,
                line: 1,
                column: 33,
            },
            content: "9e-9",
        },
        Token {
            token_type: EOF,
            start_pos: Pos {
                offset: 32,
                line: 1,
                column: 33,
            },
            end_pos: Pos {
                offset: 32,
                line: 1,
                column: 33,
            },
            content: "",
        },
    ],
)
